--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -43,6 +43,15 @@ jobs:
         env:
           NODE_ENV: production
       
+      - name: List build output
+        run: |
+          echo "Current directory contents:"
+          ls -la
+          echo "Checking for common build directories:"
+          ls -la dist/ 2>/dev/null || echo "dist/ not found"
+          ls -la build/ 2>/dev/null || echo "build/ not found"
+          ls -la out/ 2>/dev/null || echo "out/ not found"
+      
       - name: Setup Pages
         uses: actions/configure-pages@v5
       
@@ -50,6 +59,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
+          name: github-pages
+          retention-days: 1
 
   # Deployment job
   deploy:
